updated element to look for

--- a/index.htm
+++ b/index.htm
@@ -1,252 +1,1 @@
-<html><head></head><body><a target='_blank' href='https://seattle.craigslist.org/tac/clo/6183610420.html'>https://seattle.craigslist.org/tac/clo/6183610420.html</a>
-DISPLAY DATE:Posted 21 days ago<br />
-TITLE:NSS Skate Shoes N01803MBO N-Ball'N Men's 12, Black & Orange/Rust, NEW<br />
-BODY:NSS Skate Tennis Shoes N01803MBO N-Ball'N Men's 12, Black & Orange/Rust, NEW
-
-Approximately ten plus years old NEW never worn.
-This particular style is know longer available.
-
-nice skate shoes (NSS)
-
-MEN'S SKATE SHOES
-STYLE# N01803MBO
-MODEL: N-BALL'N
-COLOR: BLACK/ORANGE
-UK11 / EUR 46 / JPN 30
-USA 12
-7 05043 16200 4
-
-DESIGNED IN THE USA
-
-
-
-bem8642<br />
-<img src='https://images.craigslist.org/00U0U_htoFNz98GW0_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/clo/6183611201.html'>https://seattle.craigslist.org/tac/clo/6183611201.html</a>
-DISPLAY DATE:Posted 21 days ago<br />
-TITLE:NSS Skate Shoes N01804MBR N-Tice Men's 12, Black & Red, NEW<br />
-BODY:NSS Skate Tennis Shoes N01804MBR N-Tice Men's 12, Black & Red, NEW
-
-Approximately ten plus years old NEW never worn.
-This particular style is know longer available.
-
-nice skate shoes (NSS)
-
-MEN'S SKATE SHOES
-STYLE# N01804MBR
-MODEL: N-TICE
-COLOR: BLACK/RED
-UK11 / EUR 46 / JPN 30
-USA 12
-7 05043 16217 2
-
-DESIGNED IN THE USA
-
-
-
-bem8642<br />
-<img src='https://images.craigslist.org/00F0F_fsTn8sKhA4V_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/see/tag/6210914707.html'>https://seattle.craigslist.org/see/tag/6210914707.html</a>
-DISPLAY DATE:Posted 2 days ago<br />
-TITLE:TechDeck Skate Park (Lots of pieces!)<br />
-BODY:TechDeck Skate Park
-Many pieces
-----------------------
-
-Tony Hawk Foundation quarter pipe with rail grind ($5)
-Tony Hawk Foundation quarter-to-quarter pipe ($5)
-Spin Master wooden half pipe ($40)
-Half Bowl ($10)
-TechDeck ultimate park ($30)
-
-All parts for $80
-
-Email or text if you're interested 206 five-9-five 818-five<br />
-<img src='https://images.craigslist.org/00101_iUuhsykbzVA_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/skc/spo/6209171501.html'>https://seattle.craigslist.org/skc/spo/6209171501.html</a>
-DISPLAY DATE:Posted 3 days ago<br />
-TITLE:Mojo Skate Bench (Used) - $150<br />
-BODY:I have a used Mojo Skate Bench. It is waxed and ready to go. Nothing is wrong with it, I just don't use it much anymore because my neighborhood has a skatepark in it with ledges and rails. It's in perfect condition, just has wax and scratches on it from being grinded on. It is 76 in long and has different height settings, with the highest being 12 in.<br />
-<img src='https://images.craigslist.org/00i0i_83j4M2Kqe8u_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/sno/spo/6211011472.html'>https://seattle.craigslist.org/sno/spo/6211011472.html</a>
-DISPLAY DATE:Posted 2 days ago<br />
-TITLE:Girls Riedell Figure Ice Skates size 2.5 (skate guards included!)<br />
-BODY:Riedell boots with Cironation Ace blades.
-Has normal usage wear but condition is great.
-These boots have good ankle support, quality blades.
-Bonus - come with relatively new blue skate guards!<br />
-<img src='https://images.craigslist.org/00y0y_3fCo06pbkH3_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/est/spo/6213781473.html'>https://seattle.craigslist.org/est/spo/6213781473.html</a>
-DISPLAY DATE:Posted about 2 hours ago<br />
-TITLE:Skate Grind Wood Box with metal edge<br />
-BODY:Great Skate Grind Box 5ftx1ft
-It didnt Learn and practice skateboard, scooter and bicycle tricks
-Used but great condition<br />
-<img src='https://images.craigslist.org/00G0G_4zjbYuwyGX5_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/kit/spo/6205066512.html'>https://seattle.craigslist.org/kit/spo/6205066512.html</a>
-DISPLAY DATE:Posted 6 days ago<br />
-TITLE:Vintage Skate Boards (3), Deck & Wheels/Axles<br />
-BODY:Vintage Skate Boards, Wheels /Axles - $40
-
-- 3 vintage skate boards
-- 1 additional skate board deck
-- Also have some wheels & axles
-
-Photos show the fronts and backs of these vintage boards and decks. These have definitely seen some use, but the graphics are interesting! The small one is an alien UFO graphic. The large one, in the photo alone is about 24" in size.<br />
-<img src='https://images.craigslist.org/00y0y_23IfLgKyz3l_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/est/spo/6193528995.html'>https://seattle.craigslist.org/est/spo/6193528995.html</a>
-DISPLAY DATE:Posted 14 days ago<br />
-TITLE:Wake Skate<br />
-BODY:Wake skate Hyperlite Catalyst, like new. $125.<br />
-<img src='https://images.craigslist.org/00q0q_j8Cmt85WYRo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/see/spo/6175723498.html'>https://seattle.craigslist.org/see/spo/6175723498.html</a>
-DISPLAY DATE:Posted 27 days ago<br />
-TITLE:Alliance Longboard skate board deck<br />
-BODY:very lightly used only a couple of times. Still in great shape. No chips or anything. Just the deck.
-
-
-Please let me know if your interested and we can set up a time a place to meet that is convenient for both of us.
-
-Thank you for your time,
-
-JR
-
-
-
-
-long board skate board deck grip tape no wheels trucks or barrings alliance<br />
-<img src='https://images.craigslist.org/01717_lgnpRAdcUk1_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/sno/vgm/6196755108.html'>https://seattle.craigslist.org/sno/vgm/6196755108.html</a>
-DISPLAY DATE:Posted 12 days ago<br />
-TITLE:Tony Hawk Ride Wireless Skateboard for Wii Skate Board Tonyhawk Used<br />
-BODY:Tony Hawk Ride Wireless Skateboard for Wii Skate Board Tonyhawk Used. Game not included. Board only.
-
-Theresa's Summer Garage Sale Is Open Most Days (upon my whim!) Rain or Shine from 11AM to 6PM.
-In north Bothell, Mays Pond area, off Brook Blvd and 180th SE, 98012.
-Please email me approximately what date & time you'll be here and I will email you my address.
-Literally, it's a summer garage sale of all garage sales.
-With the cheapest of cheapest of prices.
-Please see my other items via the "more ads by this user" link on the right side of the page.<br />
-<img src='https://images.craigslist.org/00F0F_U8iPJEcatE_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/sno/spo/6213304014.html'>https://seattle.craigslist.org/sno/spo/6213304014.html</a>
-DISPLAY DATE:Posted about 7 hours ago<br />
-TITLE:Elements Skate Board<br />
-BODY:Brand New Elements Skate Board ( NYJAH HUSTON) Monster theme .... Pics attached. ...
-
-only serious buyers please...<br />
-<img src='https://images.craigslist.org/00p0p_bCkvK0gneFb_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/for/6201776610.html'>https://seattle.craigslist.org/tac/for/6201776610.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/clt/6201778670.html'>https://seattle.craigslist.org/tac/clt/6201778670.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/bab/6201777746.html'>https://seattle.craigslist.org/tac/bab/6201777746.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/clo/6201778373.html'>https://seattle.craigslist.org/tac/clo/6201778373.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/spo/6201803101.html'>https://seattle.craigslist.org/tac/spo/6201803101.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/clo/6201777085.html'>https://seattle.craigslist.org/tac/clo/6201777085.html</a>
-DISPLAY DATE:Posted 8 days ago<br />
-TITLE:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box<br />
-BODY:Authentic Juicy Couture Skate board w/ Pink "J"- New in Box
-Glitter Punk Couture on back of charm
-Pave Crystals
-Charm for Necklace or Bracelet
-Collectible
-Retails $68.00- Yours for only $20.00 Firm cash only<br />
-<img src='https://images.craigslist.org/00J0J_8ehB0UYVmpo_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/est/spo/6205727622.html'>https://seattle.craigslist.org/est/spo/6205727622.html</a>
-DISPLAY DATE:Posted 5 days ago<br />
-TITLE:Bladerunner Junior Solstice Ice Figure Skate, White, Size 10<br />
-BODY:Excellent condition, bought new and was using for my daughter before she outgrown the size, comes with blade covers
-
-The perfect blend of performance, warmth , comfort and fit at a great price
-Synthetic Plush lining with ample padding and support with quality vinyl outer
-Designed and powered by rollerblade the number one brand in skates
-Bladerunner is the fastest growing ice skate brand in the USA because of the quality and value<br />
-<img src='https://images.craigslist.org/00000_65w6k3G93Bl_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/est/spo/6205717115.html'>https://seattle.craigslist.org/est/spo/6205717115.html</a>
-DISPLAY DATE:Posted 5 days ago<br />
-TITLE:Bladerunner Junior Solstice Ice Figure Skate, White, Size 9<br />
-BODY:Excellent condition, bought new and was using for my daughter before she outgrown the size. She was 4 when she was using it.
-
-The perfect blend of performance, warmth , comfort and fit at a great price
-Synthetic Plush lining with ample padding and support with quality vinyl outer
-Designed and powered by rollerblade the number one brand in skates
-Bladerunner is the fastest growing ice skate brand in the USA because of the quality and value<br />
-<img src='https://images.craigslist.org/00808_8jSmpm3YJxN_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/see/spo/6212517240.html'>https://seattle.craigslist.org/see/spo/6212517240.html</a>
-DISPLAY DATE:Posted about 21 hours ago<br />
-TITLE:Jam Skate or figure skate boots Roller<br />
-BODY:Roller skate boots.
-
-Belati Aurora figure skating boots size 42. These are NEW boots!<br />
-<img src='https://images.craigslist.org/00w0w_dmbTybo9Vkq_600x450.jpg'><br />
-<hr />
-<a target='_blank' href='https://seattle.craigslist.org/tac/bik/6199821537.html'>https://seattle.craigslist.org/tac/bik/6199821537.html</a>
-DISPLAY DATE:Posted 10 days ago<br />
-TITLE:Punked Skate Board w/ Speed Cruiser Wheels<br />
-BODY:Punked Skate Board w/ Speed Cruiser Wheels. 40" x 10". Bill:
-show contact info<br />
-<img src='https://images.craigslist.org/00w0w_1j1CGlrHzTs_600x450.jpg'><br />
-<hr />
-</body></html>
+<html><head></head><body></body></html>
