converted all junit to testng

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-<html><head></head><body><br /><img src='/Users/jameskarasim/Downloads/Installed/repositories/SeleniumStandalone/screenshot20171004101406045.png' alt='after clicking explore button' /><br /></body></html>
+<html><head></head><body></body></html>
