added scroll test by scrolling slowly to innerheight

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-<html><head></head><body><br /><img src='screenshot20171004115942460.png' alt='after clicking recently added pins' /><br /></body></html>
+<html><head></head><body></body></html>
