had to update some selectors for pinterest

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-<html><head></head><body><br /><img src='screenshot20171005073927090.png' alt='after clicking recently added pins' /><br /></body></html>
+<html><head></head><body></body></html>
