fixed PinterestPinTest with updated locators

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-<html><head></head><body></body></html>
+<html><head></head><body><br /><img src='screenshot20180414023616708.png' alt='after clicking recently added pins' /><br /></body></html>
